[package]
name = "gphoto2"
description = "High-level wrapper for libgphoto2"
version = "1.5.0"
edition = "2021"
keywords = ["gphoto2", "gphoto", "libgphoto", "camera", "ffi"]
authors = ["Maxicarlos08 <maxicarlos08@gmail.com>"]
license = "LGPL-2.1-only"
repository = "https://git.maxicarlos.de/maxicarlos08/gphoto2-rs"
homepage = "https://github.com/maxicarlos08/gphoto2-rs"
documentation = "https://docs.rs/gphoto2/latest/gphoto2/"
readme = "README.md"

[features]
# Uses gp_log_add_func instead of gp_context_set_log_func for logging (not supported on many systems)
alt_logs = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["libgphoto2-sys", "gphoto2-test"]

[dependencies]
libgphoto2_sys = { path = "libgphoto2-sys", version = "1.1" }
libc = "0.2"
log = "0.4"

[dev-dependencies]
env_logger = "0.9.1"
insta = "1.20.0"
gphoto2_test = { path = "gphoto2-test", version = "1.0" }
