[package]
name = "gphoto2"
description = "High-level wrapper for libgphoto2"
version = "3.3.1" # Remember to also update the version in the README
edition = "2021"
keywords = ["gphoto2", "gphoto", "libgphoto", "camera", "ffi"]
authors = ["Maxicarlos08 <maxicarlos08@gmail.com>"]
license = "LGPL-2.1-only"
repository = "https://git.maxicarlos.de/maxicarlos08/gphoto2-rs"
homepage = "https://github.com/maxicarlos08/gphoto2-rs"
documentation = "https://docs.rs/gphoto2/latest/gphoto2/"
readme = "README.md"

[features]
# Uses gp_log_add_func instead of gp_context_set_log_func for logging (not supported on many systems)
extended_logs = []
test = ["libgphoto2_sys/test"]
serde = ["dep:serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["libgphoto2-sys", "gphoto2-test"]

[dependencies]
libgphoto2_sys = { path = "libgphoto2-sys", version = "1.2" }
libc = "0.2"
log = "0.4"
crossbeam-channel = "0.5.6"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
env_logger = "0.9.1"
insta = "1.20.0"
