[package]
name = "libgphoto2_sys"
version = "1.0.1"
edition = "2021"
description = "System bindings to libgphoto2"
repository = "https://git.maxicarlos.de/maxicarlos08/gphoto2-rs"
license = "LGPL-v2.1-only"

links = "gphoto2"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pkg-config = "0.3.25"
bindgen = "0.60.1"
